--- a/main.html
+++ b/main.html
@@ -2,42 +2,22 @@
 <html> 
 <head>
 	<script type="text/javascript" src="statPoint.js"></script>
-
-<style>
-.div { 
-	background-color: red; 
-	width: 50%;
-}
-#p-internal { color: white; }
-</style>
-	<script>		
-
-		function myFunc() {
-
-			var str = "grapes -->";
-			document.getElementById('demo').innerHTML = "azx">
-			alert("test")
-		}
-
-
-	</script>
+	<link rel="stylesheet" href="./graphStyling.css">
 
 </head>
 <body>
-	<?php include "./graphStyling.css" ?>
 
+	<h1 id="">Hola Baby</h1>
+	<p id=""> Para G </p>
+	<button type="button" onclick="funstuff()"> funstuff </button>
 
-
-	<h1>hola baby</h1>
-	<p id="demo"> Para G </p>
-	<button type="button" onclick="myFunc()"> ~Try~ </button>
-	<br><br><br><br><br>
-	<div class="div" "div-headline">
+	<div class="div">
 		<p id="p-internal">[Headline: Welcome to this Poll "New Poll"]</p>
 		<script> 
 			let examplePoint = new statPointValues(33, 25);
 		</script>
-	new stuff. 
+		Closing tiem.
 	</div>
+
 </body> 
 </html>
