--- a/main.html
+++ b/main.html
@@ -17,11 +17,13 @@
 	<div class="div">
 		<p id="demo" "p-internal">[Headline: Welcome to this Poll "New Poll"]</p>
 		<script> 
-			console.log("okyyup");
-			let ep1 = new statPoint(23);
-			ep1.setHeight(10);
-			console.log("setting");
-			console.log(ep1.getHeight());
+
+		console.log("--<F5> 1 ---------");
+		let ep1 = new statPoint(23);
+		console.log("-- 2 ---------");
+		console.log(ep1.getHeight());
+		console.log("-- 3 ---------");
+
 		</script>
 		Closing tiem.
 	</div>
